--- a/index.html
+++ b/index.html
@@ -51,6 +51,26 @@
 					<a href="#" class="btn-main btn-main_page">Подключиться</a>
 				</div>
 			</div>
+			<div class="menu-mobile">
+				<ul class="menu">
+					<li><a href="#">Для квартиры</a></li>
+					<li><a href="#">Для дома</a></li>
+					<li><a href="#">Для бизнеса</a></li>
+					<li><a href="#">Услуги</a></li>
+					<li><a href="#">Контакты</a></li>
+				</ul>
+				<div class="menu-mobile__contacts">
+					<a href="#" class="btn-tg">
+						<i class="fab fa-telegram-plane"></i>
+					</a>
+					<a href="tel:+79180415041" class="phone-main">+7 (918) 041-50-41</a>
+				</div>
+				<div class="menu-mobile__buttons">
+					<a href="#" class="btn-main btn-main_border">Личный кабинет</a>
+					<a href="#" class="btn-main btn-main_page">Подключиться</a>
+				</div>
+			</div>
+			<div class="menu-overlay"></div>
 		</header>
 
 		<section class="billbord">
