--- a/map.html
+++ b/map.html
@@ -20,6 +20,8 @@
 				<li><a href="index.html" target="_blanck">index</a></li> 
 				<li><a href="sale.html" target="_blanck">sale</a></li>
 				<li><a href="news.html" target="_blanck">news</a></li>
+				<li><a href="about.html" target="_blanck">about</a></li>
+				<li><a href="vacancies.html" target="_blanck">vacancies</a></li>
 			</ul> 
 		</div> 
 	</div>  
