--- a/map.html
+++ b/map.html
@@ -22,6 +22,8 @@
 				<li><a href="news.html" target="_blanck">news</a></li>
 				<li><a href="about.html" target="_blanck">about</a></li>
 				<li><a href="vacancies.html" target="_blanck">vacancies</a></li>
+				<li><a href="contacts.html" target="_blanck">contacts</a></li>
+				<li><a href="requisites.html" target="_blanck">requisites</a></li>
 			</ul> 
 		</div> 
 	</div>  
