--- a/map.html
+++ b/map.html
@@ -24,6 +24,11 @@
 				<li><a href="vacancies.html" target="_blanck">vacancies</a></li>
 				<li><a href="contacts.html" target="_blanck">contacts</a></li>
 				<li><a href="requisites.html" target="_blanck">requisites</a></li>
+				<li><a href="payment.html" target="_blanck">payment</a></li> 
+				<li><a href="questions.html" target="_blanck">questions</a></li> 
+				<li><a href="answer.html" target="_blanck">answer</a></li> 
+				<li><a href="equipment.html" target="_blanck">equipment</a></li> 
+				<li><a href="additional-services.html" target="_blanck">additional-services</a></li> 
 			</ul> 
 		</div> 
 	</div>  
