--- a/questions.html
+++ b/questions.html
@@ -78,9 +78,9 @@
 				<h1 class="title-main">Часто задаваемые вопросы</h1>
 				<a href="answer.html" target="_blank" class="item-question">Как узнать МАС адрес компьютера</a>
 				<a href="answer.html" target="_blank" class="item-question">Как правильно проверить скорость</a>
-				<a href="answer.html" target="_blank" class="item-question">Как избавится от низкой скорости по Wi-Fi</a>
+				<a href="answer.html" target="_blank" class="item-question">Как избавится от низкой скорости по Wi‑Fi</a>
 				<a href="answer.html" target="_blank" class="item-question">Фактическая скорость интернета меньше обещанной</a>
-				<a href="answer.html" target="_blank" class="item-question">Cамостоятельное подтверждение MAC-адреса устройства</a>
+				<a href="answer.html" target="_blank" class="item-question">Cамостоятельное подтверждение MAC‑адреса устройства</a>
 				<div class="form-question">
 					<div class="title-about">Задайте нам вопрос</div>
 					<form>
